[#86DevUIAlignment][Marcus] fixed: small session card width bug

--- a/src/Component/CinemaSessionPickerPage/CinemaSessionPickerPage.css
+++ b/src/Component/CinemaSessionPickerPage/CinemaSessionPickerPage.css
@@ -31,7 +31,7 @@
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 2px 2px 10px #0000001a;
   border-radius: 5px;
-  padding: 1% 5%;
+  padding: 0.3rem 1.2rem;
   margin: 0 2%;
   transition: background-color 0.3s ease-in-out;
 }
